--- a/LangChain/7_fewShots_ZeroShots.ipynb
+++ b/LangChain/7_fewShots_ZeroShots.ipynb
@@ -174,12 +174,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b581390",
+   "cell_type": "markdown",
+   "id": "219aeaaa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Explanation of the Conceptual ToT Code:\n",
+    "<ol>\n",
+    "<li> thought_generation_prompt: This prompt is designed to make the LLM generate multiple distinct ideas for the same problem. We run it three times in parallel to simulate different \"branches\" of thought.</li>\n",
+    "\n",
+    "<li>thought_branches = RunnableParallel(...): This is the core of the branching. It sends the same input (the problem statement, implicitly from the prompt) to three different chat_model_tot calls, each generating a \"thought.\" The outputs are collected into a dictionary.</li>\n",
+    "\n",
+    "<li>evaluate_thoughts function: This is our simplified \"evaluation\" step. In a real ToT, this might involve another LLM call to critique each thought, a complex scoring function, or even running a small simulation. Here, we simply pick the longest thought as a proxy for \"most detailed.\"</li>\n",
+    "\n",
+    "<li>RunnablePassthrough.assign(chosen_thought=evaluate_and_select): This crucial LCEL construct takes the output of thought_branches (the dictionary of thoughts), passes it to evaluate_and_select (which picks the best thought), and then adds this chosen_thought to the dictionary that flows to the next step.</li>\n",
+    "\n",
+    "<li>refinement_prompt and refine_plan: This final step takes the chosen_thought and asks the LLM to elaborate on it, simulating the \"refinement\" aspect of ToT.</li>\n",
+    "</ol>"
+   ]
   }
  ],
  "metadata": {
