--- a/API/1_basics.ipynb
+++ b/API/1_basics.ipynb
@@ -188,6 +188,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1722e3f7",
+   "metadata": {},
+   "source": [
+    "## Asynchronous CRUD Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9262e67f",
    "metadata": {},
    "source": []
