--- a/API/1_basics.ipynb
+++ b/API/1_basics.ipynb
@@ -199,6 +199,89 @@
    "id": "9262e67f",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55851d4f",
+   "metadata": {},
+   "source": [
+    "## Authorization\n",
+    "The modern, stateless solution is the JSON Web Token (JWT).\n",
+    "\n",
+    "After a successful login, the server generates a JWT and gives it to the client. The client then includes this token (usually in an Authorization header) with every subsequent request to prove its identity.\n",
+    "\n",
+    "A JWT looks like a long string of random characters, separated by two dots: xxxxx.yyyyy.zzzzz\n",
+    "\n",
+    "This string has three parts:\n",
+    "\n",
+    "1. Header (the xxxxx part)\n",
+    "\n",
+    "A Base64Url-encoded JSON object describing the token.\n",
+    "\n",
+    "Contains the hashing algorithm used (\"alg\": \"HS256\") and the token type (\"typ\": \"JWT\").\n",
+    "\n",
+    "2. Payload (the yyyyy part)\n",
+    "\n",
+    "A Base64Url-encoded JSON object containing the \"claims\" – the actual data.\n",
+    "\n",
+    "This is where you put the user's identity, like their user ID (sub), when the token expires (exp), and any other data you need, like their username or roles.\n",
+    "\n",
+    "Example: {\"sub\": \"123\", \"username\": \"alex\", \"exp\": 1660000000}.\n",
+    "\n",
+    "3. Signature (the zzzzz part)\n",
+    "\n",
+    "This is the security mechanism. It is created by taking the encoded Header, the encoded Payload, a secret key (known only to your server), and signing them with the algorithm from the header."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "526c3664",
+   "metadata": {},
+   "source": [
+    "</br>\n",
+    "</br>\n",
+    "Our goal is to create a system where a user can \"log in\" to receive a token, and then use that token to access protected resources. We will follow the OAuth2 password flow, which is standard for first-party clients (like a mobile app or a single-page web app talking to its own backend)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae27c7f0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f287fbb7",
+   "metadata": {},
+   "source": [
+    "## WebSockets\n",
+    "The WebSocket Endpoint\n",
+    "In FastAPI, you create a WebSocket endpoint using the @app.websocket() decorator. Instead of receiving standard request and response objects, your function will receive a WebSocket object that you use to communicate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34cfe000",
+   "metadata": {},
+   "source": [
+    "Let's break down the websocket_endpoint function:\n",
+    "\n",
+    "await websocket.accept(): This is mandatory. It performs the WebSocket \"handshake\" and establishes the persistent connection.\n",
+    "\n",
+    "while True:: The connection is persistent, so we enter a loop to continuously listen for communication.\n",
+    "\n",
+    "await websocket.receive_text(): This line waits until a text message is received from the client. FastAPI also provides receive_json() and receive_bytes().\n",
+    "\n",
+    "await websocket.send_text(...): This sends a text message back to the connected client.\n",
+    "\n",
+    "except WebSocketDisconnect:: If the client closes the connection (e.g., closes the browser tab), receive_text() will raise a WebSocketDisconnect exception. We catch this to exit our loop gracefully instead of having the server crash."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13319188",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
