--- a/adv/Exception&Class.ipynb
+++ b/adv/Exception&Class.ipynb
@@ -169,9 +169,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72c84692",
+   "metadata": {},
+   "source": [
+    "### Advanced getter setter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9891564b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "Value cannot be < 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Bank:\n",
+    "    def __init__(self, number):\n",
+    "        self._balance = number\n",
+    "\n",
+    "    @property\n",
+    "    def balance(self):\n",
+    "        return self._balance  \n",
+    "\n",
+    "    @balance.setter\n",
+    "    def balance(self, value): \n",
+    "        try:\n",
+    "            if value < 0:\n",
+    "                raise ValueError(\"Value cannot be < 0\")\n",
+    "            self._balance = value  \n",
+    "        except ValueError as e:\n",
+    "            print(e)\n",
+    "\n",
+    "bank = Bank(10)\n",
+    "print(bank.balance)  \n",
+    "bank.balance = -1  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71feaf0b",
+   "metadata": {},
+   "source": [
+    "Decorators are the fucntions that takes functions as arguements\n",
+    "### A decorator should return a wrapper function that takes the same arguments as the decorated function and calls it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1397b698",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999999\n",
+      "took0.027086734771728516\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "def decorator(func):\n",
+    "    def wrapper():\n",
+    "        start=time.time()\n",
+    "        func()\n",
+    "        end_time=time.time()\n",
+    "        print(f\"took{end_time-start}\")\n",
+    "    return wrapper\n",
+    "\n",
+    "@decorator\n",
+    "def function_call():\n",
+    "    a=0\n",
+    "    for i in range (1000000):\n",
+    "        a=i\n",
+    "    print(i)\n",
+    "\n",
+    "function_call()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c700728",
+   "metadata": {},
+   "source": [
+    "## Decorator with Args\n",
+    "simply add a decorator inside a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fc4ade9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running greet 4 times\n",
+      "nora\n",
+      "nora\n",
+      "nora\n",
+      "nora\n",
+      "fininshed\n"
+     ]
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "\n",
+    "def repeat(num_times):\n",
+    "    def decorator(func):\n",
+    "        @functools.wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            print(f\"running {func.__name__} {num_times} times\")\n",
+    "            last_value= None\n",
+    "            for _ in range(num_times):\n",
+    "                last_value = func(*args, **kwargs)\n",
+    "            print(\"fininshed\")\n",
+    "            return last_value\n",
+    "        return wrapper\n",
+    "    return decorator\n",
+    "\n",
+    "@repeat(num_times=4)\n",
+    "def greet(nam):\n",
+    "    print(nam)\n",
+    "greet(\"nora\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9891564b",
+   "id": "8297bd83",
    "metadata": {},
    "outputs": [],
    "source": []
